prepare for github.io

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>sonnie's portfolio</title>
     <meta name="artist" content="Sonnelia">
     <meta charset="UTF-8">
@@ -48,29 +48,29 @@
         <div id="illustration" class="artwork active">
           <div class="column-left">
             <div class="column-big">
-              <img class="image-preview" src="../img/illustration/lifedobelikethatsometimes.png">
-              <img class="image-preview" src="../img/illustration/mizuki.png">
-              <img class="image-preview" src="../img/illustration/szprotkum.png">
+              <img class="image-preview" src="img/illustration/lifedobelikethatsometimes.png">
+              <img class="image-preview" src="img/illustration/mizuki.png">
+              <img class="image-preview" src="img/illustration/szprotkum.png">
             </div>
             <div class="column-small">
-              <img class="image-preview" src="../img/illustration/slumber.png">
-              <img class="image-preview" src="../img/illustration/sketchbook2522.png">
-              <img class="image-preview" src="../img/illustration/love.png">
-              <img class="image-preview" src="../img/illustration/Illustration4.png">
+              <img class="image-preview" src="img/illustration/slumber.png">
+              <img class="image-preview" src="img/illustration/sketchbook2522.png">
+              <img class="image-preview" src="img/illustration/love.png">
+              <img class="image-preview" src="img/illustration/Illustration4.png">
             </div>
           </div>
           <div class="column-right">
-            <img class="image-preview" src="../img/illustration/salvia_concept2.png">
-            <img class="image-preview" src="../img/illustration/lilian.png">
-            <img class="image-preview" src="../img/illustration/starfell waltz.png">
+            <img class="image-preview" src="img/illustration/salvia_concept2.png">
+            <img class="image-preview" src="img/illustration/lilian.png">
+            <img class="image-preview" src="img/illustration/starfell waltz.png">
           </div>
         </div>
         
         <div id="design" class="artwork">
           <div class="column-center">
-            <img class="image-preview" src="../img/design/strixamiumschedule 2.0 demo.png">
-            <img class="image-preview" src="../img/design/chatting.png">
-            <img class="image-preview" src="../img/design/starting_soon.png">
+            <img class="image-preview" src="img/design/strixamiumschedule 2.0 demo.png">
+            <img class="image-preview" src="img/design/chatting.png">
+            <img class="image-preview" src="img/design/starting_soon.png">
           </div>
         </div>
 
@@ -80,7 +80,7 @@
       <div class="about">
         <div id="about-divider" class="divider"></div>
         <div class="self">
-          <img src="D:\ART\DRAWINGS\strix\stara_dopiero_wstala.png">
+          <img src="img/stara_dopiero_wstala.png">
           <p class="bio">Hello, my name is Sonnelia. I am trying to find a place for myself in this collapsing world.</p>
         </div>
       </div>
@@ -99,7 +99,7 @@
 
     <div class="cursor"></div>
     
-    <script src="../js/functions.js"></script>
+    <script src="js/functions.js"></script>
   </body>
 </html>
 
