--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/styles.css">
     <title>sonnie's portfolio</title>
-    <meta name="artist" content="Sonnelia">
+    <meta name="artist" content="portfolio">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -48,29 +48,29 @@
         <div id="illustration" class="artwork active">
           <div class="column-left">
             <div class="column-big">
-              <img class="image-preview" src="img/illustration/lifedobelikethatsometimes.png">
-              <img class="image-preview" src="img/illustration/mizuki.png">
-              <img class="image-preview" src="img/illustration/szprotkum.png">
+              <img class="image-preview" src="img/illustration/lifedobelikethatsometimes.png" alt="strix shinji">
+              <img class="image-preview" src="img/illustration/mizuki.png" alt="mizuki fanart">
+              <img class="image-preview" src="img/illustration/szprotkum.png" alt="szprotka commission">
             </div>
             <div class="column-small">
-              <img class="image-preview" src="img/illustration/slumber.png">
-              <img class="image-preview" src="img/illustration/sketchbook2522.png">
-              <img class="image-preview" src="img/illustration/love.png">
-              <img class="image-preview" src="img/illustration/Illustration4.png">
+              <img class="image-preview" src="img/illustration/slumber.png" alt="celestine concept">
+              <img class="image-preview" src="img/illustration/sketchbook2522.png" alt="celestine">
+              <img class="image-preview" src="img/illustration/love.png" alt="celestine">
+              <img class="image-preview" src="img/illustration/Illustration4.png" alt="iris">
             </div>
           </div>
           <div class="column-right">
-            <img class="image-preview" src="img/illustration/salvia_concept2.png">
-            <img class="image-preview" src="img/illustration/lilian.png">
-            <img class="image-preview" src="img/illustration/starfell waltz.png">
+            <img class="image-preview" src="img/illustration/salvia_concept2.png" alt="salvia concept">
+            <img class="image-preview" src="img/illustration/lilian.png" alt="lilian">
+            <img class="image-preview" src="img/illustration/starfell waltz.png" alt="starfell waltz">
           </div>
         </div>
         
         <div id="design" class="artwork">
           <div class="column-center">
-            <img class="image-preview" src="img/design/strixamiumschedule 2.0 demo.png">
-            <img class="image-preview" src="img/design/chatting.png">
-            <img class="image-preview" src="img/design/starting_soon.png">
+            <img class="image-preview" src="img/design/strixamiumschedule 2.0 demo.png" alt="strix schedule">
+            <img class="image-preview" src="img/design/chatting.png" alt="strix chatting">
+            <img class="image-preview" src="img/design/starting_soon.png" alt="strix starting soon">
           </div>
         </div>
 
@@ -80,7 +80,7 @@
       <div class="about">
         <div id="about-divider" class="divider"></div>
         <div class="self">
-          <img src="img/stara_dopiero_wstala.png">
+          <img src="img/stara_dopiero_wstala.png" alt="self">
           <p class="bio">Hello, my name is Sonnelia. I am trying to find a place for myself in this collapsing world.</p>
         </div>
       </div>
@@ -102,88 +102,3 @@
     <script src="js/functions.js"></script>
   </body>
 </html>
-
-<!--
-TODO
-delete or customize scroll bar
-custom cursor
-footer (made with heart by)
-disclosure when scrolling over work section
--->
-
-<!--<pre></pre> is for preformatted text - preserves spaces and line breaks-->
-<!--
-
-    <div class="main">
-      <h1 id="top">Hewwo</h1>
-      <hr>
-      <p>this is my awtwowk :3<br><b>uwu</b></p>
-      <a href="https://twitter.com/caeiestine" title="the awtwowk in question">
-        <img src="D:\ART\DRAWINGS\celestine\love.png" alt="my profile picture">
-      </a>
-
-      <a href="#top"><br>back to the top</a>
-    </div>
--->
-<!--
-<b>bold</b>
-<strong>important</strong>
-<i>italic</i>
-<em>emphasized</em>
-<mark>marked</mark>
-<small>smaller</small>
-<del>deleted</del>
-<ins>inserted</ins>
-<sub>subscript</sub>
-<sup>superscript</sup>
-
-<q>quotation</q>
-<blockquote cite="http://www.worldwildlife.org/who/index.html">quote</blockquote>
-<abbr>abbrevation title="World Health Organization">WHO</abbr> arking abbreviations can give useful information to browsers, translation systems and search-engines.
-<address></address> defines the contact information for the author/owner of a document or an article
-<cite>title of a creative work</cite>
-<bdo dir="rtl">This text will be written from right to left</bdo>
-
-
-<map> image map with clickable areas defined with <area> tag
-<picture> allowes to display different pictures for different devices or screen sizes
-
-<table>
-<caption>heading for the entire table</caption>
-<tr>table row
-  <th colspan="2" rowspan="2">table header</th>
-  <td>table cell (data)</td>
-</tr>
-</table>
-
-<ul>unordered list
-  <li>list item</li>
-</ul>
-<ol>ordered list</ol>
-<dl>description list
-  <dt>defines term</dt>
-  <dd>defines item</dd>
-</dl>
-
-<div> element is a block-level and is often used as a container for other HTML elements
-<span> element is an inline container used to mark up a part of a text, or a part of a document
-
-<kbd> element defines keyboard input
-<samp> element defines sample output from a computer program
-<code> element defines a piece of computer code
-<var> element defines a variable in programming or in a mathematical expression
-
-<article>	Defines independent, self-contained content
-<aside>	Defines content aside from the page content
-<details>	Defines additional details that the user can view or hide
-<figcaption>	Defines a caption for a <figure> element
-<figure>	Specifies self-contained content, like illustrations, diagrams, photos, code listings, etc.
-<footer>	Defines a footer for a document or section
-<header>	Specifies a header for a document or section
-<main>	Specifies the main content of a document
-<mark>	Defines marked/highlighted text
-<nav>	Defines navigation links
-<section>	Defines a section in a document
-<summary>	Defines a visible heading for a <details> element
-<time>	Defines a date/time
--->
