--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="css/styles.css">
     <title>hello lost one</title>
-    <meta name="artist" content="portfolio">
+    <meta name="artist" content="404">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -30,8 +30,8 @@
                 <p>May I interest you in my being?</p>
             </div>
             <div class="pages">
-                <a href="index.html">Click here to see a collection of my creations.</a>
-                <a href="commissions.html">Click here to order an artwork from me.</a>
+                <a href="/">Click here to see a collection of my creations.</a>
+                <a href="commissions/">Click here to order an artwork from me.</a>
             </div>
             <div class="places">
                 <p>You can also find more of me in these places:</p>
