--- a/commissions/index.html
+++ b/commissions/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="icon" href="img/icon.png">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="../img/icon.png">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>sonnie's commissions</title>
     <meta name="artist" content="commissions">
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 
     <header>
       <nav class="nav-commissions">
-        <a href="index.html">portfolio</a>
+        <a href="/">portfolio</a>
       </nav>
 
       <nav class="nav-main">
@@ -97,11 +97,11 @@
               <td class="portrait">$20</td>
               <td class="half-body">$25</td>
               <td class="full-body">$30</td>
-              <td>
-                <img class="image-preview" src="img/commissions/slumber.png" alt="celestine concept">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/slumber.png" alt="celestine concept">
               </td>
-              <td>
-                <img class="image-preview" src="img/commissions/goatperson.png" alt="fanart for my friend">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/goatperson.png" alt="fanart for my friend">
               </td>
             </tr>
             <tr class="flats">
@@ -109,11 +109,11 @@
               <td class="portrait">$45</td>
               <td class="half-body">$60</td>
               <td class="full-body">$75</td>
-              <td>
-                <img class="image-preview" src="img/commissions/salvia_concept2.png" alt="salvia concept">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/salvia_concept2.png" alt="salvia concept">
               </td>
-              <td>
-                <img class="image-preview" src="img/commissions/bonk.png" alt="strix bonk">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/bonk.png" alt="strix bonk">
               </td>
             </tr>
             <tr class="cell">
@@ -121,11 +121,11 @@
               <td class="portrait">$55</td>
               <td class="half-body">$70</td>
               <td class="full-body">$85</td>
-              <td>
-                <img class="image-preview" src="img/commissions/love.png" alt="celestine">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/love.png" alt="celestine">
               </td>
-              <td>
-                <img class="image-preview" src="img/commissions/starzy_dopiero_wstali.png" alt="me and strix">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/starzy_dopiero_wstali.png" alt="me and strix">
               </td>
             </tr>
             <tr class="painted">
@@ -133,11 +133,11 @@
               <td class="portrait">$75</td>
               <td class="half-body">$100</td>
               <td class="full-body">$125</td>
-              <td>
-                <img class="image-preview" src="img/commissions/soaked.png" alt="celestine">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/soaked.png" alt="celestine">
               </td>
-              <td>
-                <img class="image-preview" src="img/commissions/defect.png" alt="salvia">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/defect.png" alt="salvia">
               </td>
             </tr>
           </tbody>
@@ -146,11 +146,11 @@
             <tr class="emotes">
               <th>emotes</th>
               <td>$15 each</td>
-              <td>
-                <img class="image-preview" src="img/commissions/owo.png" alt="owo strix emote">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/owo.png" alt="owo strix emote">
               </td>
-              <td>
-                <img class="image-preview" src="img/commissions/like.png" alt="like strix emote">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/like.png" alt="like strix emote">
               </td>
             </tr>
           </tbody>
@@ -234,6 +234,6 @@
       <p id="caution" class="copyrights">repost or reproduction prohibited</p>
     </div>
     
-    <script src="js/functions.js"></script>
+    <script src="../js/functions.js"></script>
   </body>
 </html>
