--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
             </div>
             <div class="pages">
                 <a href="/">Click here to see a collection of my creations.</a>
-                <a href="commissions/">Click here to order an artwork from me.</a>
+                <a href="commissions">Click here to order an artwork from me.</a>
             </div>
             <div class="places">
                 <p>You can also find more of me in these places:</p>
