--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <header>
       <nav class="nav-commissions">
-        <a href="commissions/">commissions</a>
+        <a href="commissions">commissions</a>
       </nav>
 
       <nav class="nav-main">
