--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <img class="image-preview" src="img/design/strixamiumschedule 2.0 demo.png" alt="strix schedule">
             <img class="image-preview" src="img/design/chatting.png" alt="strix chatting">
             <img class="image-preview" src="img/design/starting_soon.png" alt="strix starting soon">
+            <img class="image-preview" src="img/design/chat-widget.png" alt="strix chat widget design">
           </div>
         </div>
 
