additions and decorations

--- a/404.html
+++ b/404.html
@@ -24,10 +24,12 @@
     <main>
 
         <div class="treasure">
+          <img src="img/desk.png" alt="celestine on desk">
+          <div>
             <div class="found">
                 <p>You've found me.</p>
                 <p>Welcome to my special place.</p>
-                <p>May I interest you in my being?</p>
+                <p>There's a lot to discover...</p>
             </div>
             <div class="pages">
                 <a href="/">Click here to see a collection of my creations.</a>
@@ -38,6 +40,7 @@
                 <a href="https://twitter.com/sonnelias" target="_blank" rel="noopener noreferrer">twitter</a>
                 <a href="https://bsky.app/profile/sonnelia.bsky.social" target="_blank" rel="noopener noreferrer">bluesky</a>
             </div>
+          </div>
         </div>
 
     </main>
