--- a/commissions/index.html
+++ b/commissions/index.html
@@ -60,7 +60,7 @@
               <dd>The final price may increase depending on complexity.</dd>
               <dd>I have the right to reject any order for any reason. I will not draw gore, violence, explicit sexual content, fetishes.</dd>
               <dd>Usage of my art for anything NFT or AI related is strictly prohibited.</dd>
-              <dd>When ordering written descriptions will not be enough, so please include references. They don&rsquo;t have to be pretty, even ms paint mouse drawing or collage of images can be helpful.</dd>
+              <dd>When ordering, written descriptions will not be enough, so please include references. They don&rsquo;t have to be pretty, even ms paint mouse drawing or collage of images can be helpful.</dd>
               <dd>Contact me if you want to order something that is not listed here, but presented in my portfolio (like interiors, stream assets, design, web development).</dd>
             </dl>
 
@@ -158,11 +158,11 @@
           <tbody>
             <tr class="extra">
               <th>additional costs</th>
-              <td>75% additional characters</td>
-              <td>25-50% animals/creatures</td>
-              <td>10-50% props</td>
-              <td>10-100% background</td>
-              <td>0-25% complicated design</td>
+              <td>+75% additional characters</td>
+              <td>+25-50% animals/creatures</td>
+              <td>+10-50% props</td>
+              <td>+10-100% background</td>
+              <td>+0-25% complicated design</td>
             </tr>
           </tbody>
         </table>
@@ -173,9 +173,9 @@
         <div id="tos-divider" class="divider"></div>
 
         <div class="terms-of-service">
-          <p>terms of service</p>
+          <p>Terms of Service</p>
 
-          <p>Not agreeing to the terms stated below results in contract termination. Breaking any of the rules under the copyrights section will cause the client to owe me penalties.</p>
+          <span>Not agreeing to the terms stated below results in contract termination. Breaking any of the rules under the copyrights section will cause the client to owe me penalties.</span>
           
           <dl>
             <dt>Payment</dt>
@@ -208,7 +208,7 @@
             <dd>I, the artist, retain all copyrights over the commissioned artwork and reserve the right to use the commissioned artwork in portfolio, social media and such.</dd>
             <dd>I do not allow my artwork to be used for training AI or selling NFTs.</dd>
             <dd>The client is obliged to credit me when using the commissioned artwork.</dd>
-            <dd>The client is allowed to use the commissioned artwork for personal use only unless a separate commercial use agreement has been made.</dd>
+            <dd>The commissioned artwork is for personal use only unless a separate commercial use agreement has been made.</dd>
             <dd>The client is not allowed to alter the commissioned artwork in any way without my consent, please contact me to discuss it.</dd>
           </dl>
           
