--- a/404.html
+++ b/404.html
@@ -38,6 +38,7 @@
             <div class="places">
                 <p>You can also find more of me in these places:</p>
                 <a href="https://twitter.com/sonnelias" target="_blank" rel="noopener noreferrer">twitter</a>
+                <a href="https://sonnelia.tumblr.com" target="_blank" rel="noopener noreferrer">tumblr</a>
                 <a href="https://bsky.app/profile/sonnelia.bsky.social" target="_blank" rel="noopener noreferrer">bluesky</a>
             </div>
           </div>
