--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <tr>
               <td>
                 <a href="https://twitter.com/sonnelias" target="_blank" rel="noopener noreferrer">twitter</a>
+                <a href="https://sonnelia.tumblr.com" target="_blank" rel="noopener noreferrer">tumblr</a>
                 <a href="https://bsky.app/profile/sonnelia.bsky.social" target="_blank" rel="noopener noreferrer">bluesky</a>
                 <a href="https://artistree.io/sonnelia" target="_blank" rel="noopener noreferrer">artistree</a>
               </td>
