--- a/404.html
+++ b/404.html
@@ -8,41 +8,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body></body>
+  <body>
 
-    <div class="cursor"></div>
+    <div id="cursor"></div>
 
     <div class="noise"></div>
 
-    <div class="borders">
-      <div class="border-left"></div>
-      <div class="border-top"></div>
-      <div class="border-right"></div>
-      <div class="border-bottom"></div>
+    <div id="borders">
+      <div id="border-left"></div>
+      <div id="border-right"></div>
+      <div id="border-bottom"></div>
     </div>
 
     <main>
 
-        <div class="treasure">
-          <img src="img/desk.png" alt="celestine on desk">
-          <div>
-            <div class="found">
-                <p>You've found me.</p>
-                <p>Welcome to my special place.</p>
-                <p>There's a lot to discover...</p>
-            </div>
-            <div class="pages">
-                <a href="/">Click here to see a collection of my creations.</a>
-                <a href="commissions">Click here to order an artwork from me.</a>
-            </div>
-            <div class="places">
-                <p>You can also find more of me in these places:</p>
-                <a href="https://twitter.com/sonnelias" target="_blank" rel="noopener noreferrer">twitter</a>
-                <a href="https://sonnelia.tumblr.com" target="_blank" rel="noopener noreferrer">tumblr</a>
-                <a href="https://bsky.app/profile/sonnelia.bsky.social" target="_blank" rel="noopener noreferrer">bluesky</a>
-            </div>
-          </div>
-        </div>
+      <div class="section" id="error">
+        <img src="img/agentka.png">
+        <p>Oopsie! I think we're not supposed to be here... Let's go back <a href="/">home</a>.</p>
+      </div>
 
     </main>
     
