--- a/commissions/index.html
+++ b/commissions/index.html
@@ -68,7 +68,7 @@
     <main>
       <div class="section" id="start">
 
-        <p id="commissions-intro">Welcome, thank you for your interest!<br>For now commissions are taken on one at a time.<br>Please read my <a href="terms-of-service">terms of service</a> before contacting me.</p>
+        <p id="commissions-intro">Welcome, thank you for your interest!<br>For now commissions are taken on one at a time.<br>Please read my <a href="/terms-of-service">terms of service</a> before contacting me.</p>
 
       </div>
 
