image viewer adjustments

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </main>
 
 
-    
+
     <div class="image-viewer">
 
       <div class="noise" id="noise-viewer"></div>
@@ -142,12 +142,12 @@
           <svg><path fill-rule="evenodd" clip-rule="evenodd" d="M7 14C10.866 14 14 10.866 14 7C14 3.13401 10.866 0 7 0C3.13401 0 0 3.13401 0 7C0 10.866 3.13401 14 7 14ZM7 14C4.65279 14 2.75 12.0972 2.75 9.75C2.75 7.40279 4.65279 5.5 7 5.5C9.34721 5.5 11.25 7.40279 11.25 9.75C11.25 12.0972 9.34721 14 7 14Z"/></svg>
           <a class="viewer-close">close</a>
         </div>
-        <span class="viewer-previous"><a><svg><path d="M7 0C3.134 0-0 3.134-0 7-0 10.866 3.134 14 7 14L7 0Z" stroke="none"/></svg></a></span>
-        <span class="viewer-next"><a><svg><path d="M0 14C3.866 14 7 10.866 7 7 7 3.134 3.866 0 0 0L0 14Z" stroke="none"/></svg></a></span>
+        <div class="viewer-navigation">
+          <a class="viewer-previous"><svg><path d="M7 0C3.134 0-0 3.134-0 7-0 10.866 3.134 14 7 14L7 0Z" stroke="none"/></svg></a>
+          <a class="viewer-next"><svg><path d="M7 14C10.866 14 14 10.866 14 7 14 3.134 10.866 0 7 0L7 14Z" stroke="none"/></svg></a>
+        </div>
       </nav>
-      <div class="zoom">
-        <img class="image-zoom">
-      </div>
+      <img class="image-zoom">
       <p class="caution">© Sonnelia. Repost or reproduction prohibited.</p>
     </div>
     
