add more social media

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
           <div class="links">
             <a href="https://twitter.com/sonnelias" target="_blank" rel="noopener noreferrer">twitter</a>
             <span class="separator"></span>
+            <a href="https://bsky.app/profile/sonnelia.bsky.social" target="_blank" rel="noopener noreferrer">bluesky</a>
+            <span class="separator"></span>
+            <a href="https://sonnelia.tumblr.com" target="_blank" rel="noopener noreferrer">tumblr</a>
+          </div>
+
+          <div class="links">
             <a href="https://artistree.io/sonnelia" target="_blank" rel="noopener noreferrer">artistree</a>
             <span class="separator"></span>
             <a class="mail">mail</a>
