add goal widget

--- a/commissions/index.html
+++ b/commissions/index.html
@@ -225,11 +225,38 @@
               </td>
             </tr>
           </tbody>
-
           
           <tbody>
             <tr>
-              <th>goal<br>coming soon!</th>
+              <th>goal<br>design starts at $20<br>coding starts at $30</th>
+              <td>
+                <dl>
+                  <dt>Features:</dt>
+                  <dd>progress bar styling,</dd>
+                  <dd>different goal types,</dd>
+                  <dd>milestones,</dd>
+                  <dd>mini event alerts,</dd>
+                  <dd>animations.</dd>
+
+                  <dt>Functions included by default:</dt>
+                  <dd>choose goal time period,</dd>
+                  <dd>show/hide toggles for title, counter and percent,</dd>
+                  <dd>save progress between widget restarts,</dd>
+                  <dd>choose behavior on goal reached,</dd>
+                  <dd>modify goal progress with commands.</dd>
+                </dl>
+              </td>
+            </tr>
+            <tr class="design-images">
+              <td class="commission-preview">
+                <img class="image-preview" src="../img/commissions/strix-goal-widget.gif" alt="alert for strix">
+              </td>
+            </tr>
+          </tbody>
+          
+          <tbody>
+            <tr>
+              <th>megathon<br>coming soon!</th>
             </tr>
             <tr class="design-images">
             </tr>
