WU + tos update and fix

--- a/commissions/index.html
+++ b/commissions/index.html
@@ -170,7 +170,7 @@
                 <dl>
                   <dt>Features:</dt>
                   <dd>role styling,</dd>
-                  <dd>special message variations (ex. highlighted),</dd>
+                  <dd>special message variations (e.g. highlighted),</dd>
                   <dd>custom badges or decorations,</dd>
                   <dd>pronouns next to username,</dd>
                   <dd>large emotes for emote only messages,</dd>
@@ -209,7 +209,7 @@
                 <dl>
                   <dt>Features:</dt>
                   <dd>alert styling,</dd>
-                  <dd>custom messages (ex. "x just subscribed!"),</dd>
+                  <dd>custom messages (e.g. "x just subscribed!"),</dd>
                   <dd>animations.</dd>
 
                   <dt>Functions included by default:</dt>
