--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -180,8 +180,9 @@
           
           <dl>
             <dt>Commercial license</dt>
-            <dd>Prints, merch and anything for-profit will be categorized under commercial and will be priced accordingly, depending on scale.</dd>
-            <dd>Stream assets and promotional graphics are considered semi-commercial, meaning that the client may profit off of it indirectly.</dd>
+            <dd>All commissions are presumed for personal usage unless stated otherwise by the client when ordering.</dd>
+            <dd>Stream assets and promotional graphics will be considered as semi-commercial, meaning that the client may profit off of it indirectly.</dd>
+            <dd>Commissioned work intended for digital or physical sales will be categorized under commercial and will be priced accordingly, depending on scale.</dd>
           </dl>
         </div>
 
