--- a/commissions/index.html
+++ b/commissions/index.html
@@ -175,7 +175,7 @@
                   <dd>pronouns next to username,</dd>
                   <dd>large emotes for emote only messages,</dd>
                   <dd>“replying to” above a message,</dd>
-                  <dd>connected messages from same user,</dd>
+                  <dd>connected messages from the same user,</dd>
                   <dd>messages fade over time,</dd>
                   <dd>in-chat alerts,</dd>
                   <dd>custom animations.</dd>
