WU + minor website changes

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="divider"><p></p></div>
         
         <div id="bio">
-          <p>Hello, my name is Sonnelia. I am trying to find a place for myself in this collapsing world.<br>My passions involve developing stream widgets, designing graphics and creating illustrations.<br>If you are interested in working with me please refer to the <a href="/commissions">commissions</a> page.</p>
+          <p>Hello, my name is Sonnelia. I am trying to find a place for myself in this collapsing world.<br>My passions involve developing stream widgets, designing graphics and painting illustrations.<br>If you are interested in working with me please refer to the <a href="/commissions">commissions</a> page.</p>
           <p>Scroll down to see my portfolio.</p>
         </div>
       </div>
