WU + TOS update and minor changes to website

--- a/commissions/index.html
+++ b/commissions/index.html
@@ -114,7 +114,7 @@
 
         <p>Welcome, thank you for your interest! Please read my terms of service before commissioning me. Contact me to discuss custom orders (illustrations, drawn interiors, stream overlays, custom widgets, other visual design or frontend development). For examples of my work visit my <a href="/">portfolio</a> page.</p>
 
-        <p>Below is a list of base prices and example features for custom stream widgets, design and/or coding. Semi commercial license. These prices are subject to change based on demand and my experience. Final price may increase depending on complexity and additions (+% of base price):</p>
+        <p>Below is a list of base prices and example features for custom stream widgets, design and/or coding. These prices are subject to change based on demand and my experience. Final price may increase depending on complexity and additions (+% of base price):</p>
   
         <div id="extra-prices">
           <div><p>+10%</p><p>light/dark mode or other color changing,</p></div>
@@ -208,7 +208,7 @@
 
         <p>Feel free to contact me for both inquiries and questions by using the form below or emailing me at glitchedmoons@gmail.com, via my commission platforms or social media. Though I do not guarantee that I will answer if you reach out to me via social media, I ask for your understanding.</p>
 
-        <p>If you’d like to commission me please make sure you read and understood my terms of service and included in your order as much information as needed. Keep in mind I can only take on a limited number of commissions at a time and might not be able to accept your request at the moment. You are welcome to reach out to me at a later date though!</p>
+        <p>If you’d like to commission me please make sure you read and understood my terms of service and included in your order as much information as needed. Keep in mind I can only take on a limited number of commissions at a time and might not be able to accept your request at the moment. If so, you are welcome to reach out to me at a later date!</p>
 
         <form action="https://formsubmit.co/glitchedmoons@gmail.com" method="POST" enctype="multipart/form-data">
           <input type="hidden" name="_next" value="https://sonnelia.github.io/commissions/">
