--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="divider"><p>stream assets</p></div>
 
         <div class="artwork">
-          <div><img src="img/assets/kix-chat.png"><p>chat widget for <a href="https://kitsunekichiku.carrd.co/" target="_blank" rel="noreferrer">Kitsune Kichiku</a><br>design and code by Sonnelia</p></div>
+          <div><img src="img/assets/lettuce-chat.png"><p>chat widget for <a href="https://linktr.ee/PlasticLettuce" target="_blank" rel="noreferrer">Plastic Lettuce</a><br>design and code by Sonnelia</p></div>
 
           <div><img src="img/assets/memoxx-chat.jpg"><p>P2U widget set - <a href="https://vgen.co/teacuppity/product/memo-xx-overlay-set-for-streamelements/d669b976-22c9-4ed7-879a-e6bdc720e2f8" target="_blank" rel="noreferrer">Memo xx</a><br>design by <a href="https://x.com/teacuppity" target="_blank" rel="noreferrer">Teacuppity</a>, code by Sonnelia</p></div>
 
