WU + new widget showcase

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
           <div><img src="img/assets/memoxx-chat.jpg"><p>P2U widget set - <a href="https://vgen.co/teacuppity/product/memo-xx-overlay-set-for-streamelements/d669b976-22c9-4ed7-879a-e6bdc720e2f8" target="_blank" rel="noreferrer">Memo xx</a><br>design by <a href="https://x.com/teacuppity" target="_blank" rel="noreferrer">Teacuppity</a>, code by Sonnelia</p></div>
 
           <div><img src="img/assets/nightglow-widgets.jpg"><p>P2U widget set - <a href="https://vgen.co/teacuppity/product/-nightglow-donogoal-chat-widget-online-widget/fb72b4f6-76d2-495d-9e9f-643a88aa8b89" target="_blank" rel="noreferrer">Nightglow</a><br>design by <a href="https://x.com/teacuppity" target="_blank" rel="noreferrer">Teacuppity</a>, code by Sonnelia</p></div>
+
+          <div><img src="img/assets/heralyse-subathon.gif"><p>subathon widget for <a href="https://heralyse.carrd.co/" target="_blank" rel="noreferrer">Heralyse</a><br>design and code by Sonnelia</p></div>
           
           <div><img src="img/assets/egistential-chat.png"><p>chat widget for <a href="https://linktr.ee/egistential" target="_blank" rel="noreferrer">Egistential</a><br>design by <a href="https://x.com/teacuppity" target="_blank" rel="noreferrer">Teacuppity</a>, code by Sonnelia</p></div>
           
